--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="main__content">
         <header class="menu">
             <div class="logo__img">
-                <img src="/img/logo.svg" alt="Logo">
+                <img src="img/logo.svg" alt="Logo">
                 <samp class="grow">Grow</samp>
                 <samp class="be">Be</samp>
             </div>
