--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="main__content">
         <header class="menu">
             <div class="logo__img">
-                <img src="img/logo.svg" alt="Logo">
+                <img src="./img/logo.svg" alt="Logo">
                 <samp class="grow">Grow</samp>
                 <samp class="be">Be</samp>
             </div>
@@ -37,17 +37,17 @@
                 <p>Watch Video</p>
             </div>
             <div class="main__img">
-                <img src="/img/main img.svg" alt="img1">
+                <img src="./img/main img.svg" alt="img1">
             </div>
         </main>
         <footer class="footer_img">
             <div>
-                <a href="#"><img src="/img/1.svg" alt="logo1"></a>
-                <a href="#"><img src="/img/6.svg" alt="logo2"></a>
-                <a href="#"><img src="/img/3.svg" alt="logo3"></a>
-                <a href="#"><img src="/img/4.svg" alt="logo4"></a>
-                <a href="#"><img src="/img/5.svg" alt="logo5"></a>
-                <a href="#"><img src="/img/6.svg" alt="logo6"></a>
+                <a href="#"><img src="./img/1.svg" alt="logo1"></a>
+                <a href="#"><img src="./img/6.svg" alt="logo2"></a>
+                <a href="#"><img src="./img/3.svg" alt="logo3"></a>
+                <a href="#"><img src="./img/4.svg" alt="logo4"></a>
+                <a href="#"><img src="./img/5.svg" alt="logo5"></a>
+                <a href="#"><img src="./img/6.svg" alt="logo6"></a>
             </div>
         </footer>
     </div>
