--- a/index.html
+++ b/index.html
@@ -10,25 +10,28 @@
     <div class="main__content">
         <header class="menu">
             <div class="logo__img">
-                <img src="img/logo.svg" alt="Logo">
-                <samp class="grow">Grow</samp>
-                <samp class="be">Be</samp>
+                <img class="img" src="img/logo.svg" alt="Logo">
+                <div class="logo_text">
+                    <samp class="grow">Grow</samp><samp class="be">Be</samp>
+                </div>
+                
             </div>
             <div class="menu_text">
                 <a class="menu__left--color" href="#">Home</a>
                 <a class="menu__left" href="#">About Us</a>
                 <a class="menu__left" href="#">Services</a>
-                <a class="menu__left" href="#">Features</a>
+                <a class="menu__left" href="#">Features <img src="img/icon.svg" alt="icon"></a>
                 <a class="menu__left" href="#">Team</a>
                 <a class="menu__left" href="#">Blog</a>
                 <a class="menu__left" href="#">Contact</a>
             </div>
         </header>
         <main class="main__info">
-            <div class="main__info__head">
+        <div class="main__text">
+                <div class="main__info__head">
                 <h2>SEO & Digital Marketing For Your Website.</h2>
             </div>
-            <div class="main__info__taxt">
+            <div class="main__info__text">
                 <p>Provide all kind of seo 
                     services and help to improve seo ranking. Globally incubate standards.</p>
             </div>
@@ -36,17 +39,28 @@
                 <button class="main__button__start">Start Now</button>
                 <p>Watch Video</p>
             </div>
+        </div>
             <div class="main__img">
                 <img src="img/main img.svg" alt="img1">
             </div>
         </main>
-        <footer class="footer_img">
-            <div>
+        <footer class="footer__img">
+            <div class="footer__img__logo">
                 <a href="#"><img src="img/1.svg" alt="logo1"></a>
+            </div>
+            <div class="footer__img__logo">
                 <a href="#"><img src="img/6.svg" alt="logo2"></a>
+            </div>
+            <div class="footer__img__logo">
                 <a href="#"><img src="img/3.svg" alt="logo3"></a>
+            </div>
+            <div class="footer__img__logo">
                 <a href="#"><img src="img/4.svg" alt="logo4"></a>
+            </div>
+            <div class="footer__img__logo">
                 <a href="#"><img src="img/5.svg" alt="logo5"></a>
+            </div>
+            <div class="footer__img__logo">
                 <a href="#"><img src="img/6.svg" alt="logo6"></a>
             </div>
         </footer>
