--- a/index.html
+++ b/index.html
@@ -1,69 +1,289 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>GrowBe</title>
 </head>
+
 <body>
-    <div class="main__content">
-        <header class="menu">
-            <div class="logo__img">
-                <img class="img" src="img/logo.svg" alt="Logo">
-                <div class="logo_text">
-                    <samp class="grow">Grow</samp><samp class="be">Be</samp>
+    <div class="main">
+        <header class="all_menu">
+            <div class="menu">
+                <div class="logo">
+                    <img class="logo__img" src="img/logo.svg" alt="Logo">
+                    <div class="logo_text">
+                        <samp class="grow">Grow</samp><samp class="be">Be</samp>
+                    </div>
                 </div>
-                
-            </div>
-            <div class="menu_text">
-                <a class="menu__left--color" href="#">Home</a>
-                <a class="menu__left" href="#">About Us</a>
-                <a class="menu__left" href="#">Services</a>
-                <a class="menu__left" href="#">Features <img src="img/icon.svg" alt="icon"></a>
-                <a class="menu__left" href="#">Team</a>
-                <a class="menu__left" href="#">Blog</a>
-                <a class="menu__left" href="#">Contact</a>
+                <div class="menu__left__all">
+                    <div class="menu_text">
+                        <a class="menu__left--color" href="#">Home</a>
+                        <a class="menu__left" href="#">About Us</a>
+                        <a class="menu__left" href="#">Services</a>
+                        <a class="menu__left" href="#">Features <img src="img/icon.svg" alt="icon"></a>
+                        <a class="menu__left" href="#">Team</a>
+                        <a class="menu__left" href="#">Blog</a>
+                        <a class="menu__left" href="#">Contact</a>
+                    </div>
+                    <button class="button__getStarted">Get Started</button>
+                </div>
             </div>
         </header>
-        <main class="main__info">
-        <div class="main__text">
-                <div class="main__info__head">
-                <h2>SEO & Digital Marketing For Your Website.</h2>
+        <main class="all__content">
+            <div class="content">
+                <div class="content__text">
+                    <div class="content__text__head">
+                        <p>SEO & Digital Marketing For Your Website.</p>
+                    </div>
+                    <div class="content__text__paragraph">
+                        <p>Provide all kind of seo
+                            services and help to improve seo ranking. Globally incubate standards.</p>
+                    </div>
+                    <div class="content__text__button">
+                        <button class="content__text__button__start">Start Now</button>
+                        <div class="button__watch">
+                            <div class="logo__play">
+                                <img src="img/icon play.svg" alt="play">
+                            </div>
+                            <div class="text__watch">
+                                <p>Watch Video</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="content__img">
+                    <img src="img/main img.svg" alt="img1">
+                </div>
             </div>
-            <div class="main__info__text">
-                <p>Provide all kind of seo 
-                    services and help to improve seo ranking. Globally incubate standards.</p>
+            <div class="logo__network">
+                <div class="logo__network__img">
+                    <a href="#"><img src="img/1.svg" alt="logo1"></a>
+                </div>
+                <div class="logo__network__img">
+                    <a href="#"><img src="img/6.svg" alt="logo2"></a>
+                </div>
+                <div class="logo__network__img">
+                    <a href="#"><img src="img/3.svg" alt="logo3"></a>
+                </div>
+                <div class="logo__network__img">
+                    <a href="#"><img src="img/4.svg" alt="logo4"></a>
+                </div>
+                <div class="logo__network__img">
+                    <a href="#"><img src="img/5.svg" alt="logo5"></a>
+                </div>
+                <div class="logo__network__img">
+                    <a href="#"><img src="img/6.svg" alt="logo6"></a>
+                </div>
             </div>
-            <div class="main__button">
-                <button class="main__button__start">Start Now</button>
-                <p>Watch Video</p>
+            <div class="content__two">
+                <div class="content__two__text">
+                    <div class="content__two__text__head">
+                        <p>Perfect Solution For Your Business</p>
+                    </div>
+                    <div class="content__two__text__paragraph">
+                        <p>Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate
+                            e-business applications through revolutionary catalysts for chang the Seamlessly underwhelm
+                            optimal testing procedures.</p>
+                    </div>
+                    <div class="content__two__button">
+                        <button class="content__two__button__learnMore">Learn More</button>
+                    </div>
+                </div>
+                <div class="content__two__img">
+                    <img src="img/macbook.svg" alt="macbook">
+                </div>
             </div>
-        </div>
-            <div class="main__img">
-                <img src="img/main img.svg" alt="img1">
+            <div class="content__text__tree">
+                <div class="box__one">
+                    <img src="img/icon1_content_tree.svg" alt="icon1">
+                    <p class="content__text__tree__head">Grow Your Business</p>
+                    <p class="content__text__tree__paragraph">Leverage agile frameworks to provide a robust synopsis for
+                        high level overviews.</p>
+                    <p class="content__text__tree__more">Read More...</p>
+                </div>
+                <div class="box__two">
+                    <img src="img/icon2_content_tree.svg" alt="icon2">
+                    <p class="content__text__tree__head">Get Quality Ieads</p>
+                    <p class="content__text__tree__paragraph">Leverage agile frameworks to provide a robust synopsis for
+                        high level overviews.</p>
+                    <p class="content__text__tree__more">Read More...</p>
+                </div>
+                <div class="box__tree">
+                    <img src="img/icon3_content_tree.svg" alt="icon3">
+                    <p class="content__text__tree__head">Drive More Sales</p>
+                    <p class="content__text__tree__paragraph">Leverage agile frameworks to provide a robust synopsis for
+                        high level overviews.</p>
+                    <p class="content__text__tree__more">Read More...</p>
+                </div>
             </div>
+            <div class="content__text__four">
+                <p class="content__text__four__head">Why You Should Choose Us.</p>
+                <p class="content__text__four__paragraph">Distinctively exploit optimal alignments for intuitive
+                    bandwidth. Quickly coordinate e-business applications through revolutionary catalysts.</p>
+                <div class="content__text__four__box">
+                    <div class="box__one">
+                        <img src="img/img1_content_four.svg" alt="img1">
+                        <p class="content__text__four__head">Keyword Research</p>
+                        <p class="content__text__four__paragraph">Business applications through revolutionary catalysts
+                            for chang the Seamlessly underwhelm dures.</p>
+                        <div class="box_button"><button class="content__text__four__button">Learn More <img
+                                    src="img/icon_content_four.svg" alt="icon"></button>
+                        </div>
+                    </div>
+                    <div class="box__two">
+                        <img src="img/img2_content_four.svg" alt="img2">
+                        <p class="content__text__four__head">Seo Optimazadion</p>
+                        <p class="content__text__four__paragraph">Business applications through revolutionary catalysts
+                            for chang the Seamlessly underwhelm dures.</p>
+                        <div class="box_button"><button class="content__text__four__button">Learn More <img
+                                    src="img/icon_content_four.svg" alt="icon"></button>
+                        </div>
+                    </div>
+                    <div class="box__tree">
+                        <img src="img/img3_content_four.svg" alt="img3">
+                        <p class="content__text__four__head">Social Marketing</p>
+                        <p class="content__text__four__paragraph">Business applications through revolutionary catalysts
+                            for chang the Seamlessly underwhelm dures.</p>
+                        <div class="box_button"><button class="content__text__four__button">Learn More <img
+                                    src="img/icon_content_four.svg" alt="icon"></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="content__text__five">
+                <div class="content__img__five">
+                    <img src="img/img1_content_five.svg" alt="img1">
+                </div>
+                <div class="content__text__five__box">
+                    <p class="content__text__five__head">You may ask what
+                        SEO & why do you need it?</p>
+                    <p class="content__text__five__paragraph">Distinctively exploit optimal alignments for intuitive
+                        bandwidth. Quickly coordinate e-business applications through revolutionary.</p>
+                    <div class="content__text__five__all__box">
+                        <div class="box__one">
+                            <div class="box__img">
+                                <img src="img/Icon1_content_five.svg" alt="Icon1">
+                            </div>
+                            <div class="box__text">
+                                <p class="content__text__five__head">Social Media Marketing</p>
+                                <p class="content__text__five__paragraph">Business applications through
+                                    revolutionary
+                                    catalysts for chang the Seamlessly underwhelm dures.</p>
+                            </div>
+                        </div>
+                        <div class="box__two">
+                            <div class="box__img">
+                                <img src="img/Icon2_content_five.svg" alt="Icon2">
+                            </div>
+                            <div class="box__text">
+                                <p class="content__text__five__head">Email Marketing</p>
+                                <p class="content__text__five__paragraph">Business applications through
+                                    revolutionary
+                                    catalysts for chang the Seamlessly underwhelm dures.</p>
+                            </div>
+                        </div>
+                        <div class="box__tree">
+                            <div class="box__img">
+                                <img src="img/Icon3_content_five.svg" alt="Icon3">
+                            </div>
+                            <div class="box__text">
+                                <p class="content__text__five__head">SEO Optimization</p>
+                                <p class="content__text__five__paragraph">Business applications through
+                                    revolutionary
+                                    catalysts for chang the Seamlessly underwhelm dures.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </main>
-        <footer class="footer__img">
-            <div class="footer__img__logo">
-                <a href="#"><img src="img/1.svg" alt="logo1"></a>
+        <footer class="footer__text">
+            <div class="footer__text__box">
+                <div class="box__one">
+                    <div class="logo__footer">
+                        <img class="logo__img" src="img/logo.svg" alt="Logo">
+                        <div class="logo_text">
+                            <samp class="grow">Grow</samp><samp class="be">Be</samp>
+                        </div>
+                    </div>
+                    <div class="footer__text__box__one">
+                        <p>Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate business
+                            through revolutionary.</p>
+                    </div>
+                    <div class="footer__img__box__one">
+                        <img src="img/social icon.svg" alt="social">
+                    </div>
+                </div>
+                <div class="box__two">
+                    <div class="footer__head__box__two">
+                        <p>
+                            Our Company
+                        </p>
+                    </div>
+                    <div class="footer__list__box__two">
+                        <div class="img__box__two">
+                            <img src="img/dots.svg" alt="dots">
+                        </div>
+                        <div class="list__box__two">
+                            <dl>
+                                <dt>About Us</dt>
+                                <dt>Our Services</dt>
+                                <dt>Our Plan</dt>
+                                <dt>Our Team</dt>
+                                <dt>Latest News</dt>
+
+                            </dl>
+                        </div>
+                    </div>
+                </div>
+                <div class="box__tree">
+                    <div class="footer__head__box__tree">
+                        <p>
+                            Our Services
+                        </p>
+                    </div>
+                    <div class="footer__list__box__tree">
+                        <div class="img__box__tree">
+                            <img src="img/dots.svg" alt="dots">
+                        </div>
+                        <div class="list__box__tree">
+                            <dl>
+                                <dt>Digital Marketing</dt>
+                                <dt>SEO Optimazation</dt>
+                                <dt>Web Development</dt>
+                                <dt>Link Building</dt>
+                                <dt>Terms & Privacy</dt>
+                            </dl>
+                        </div>
+                    </div>
+                </div>
+                <div class="box_four">
+                    <p class="footer__head__box__four">Contact Us</p>
+                    <div class="footer__address__box__four">
+                        <samp class="footer__bold__box__four">Location:</samp>
+                        <samp class="footer__text__box__four">1370 Orvilly Rot APT,
+                            New York, USA</samp>
+                    </div>
+                    <div class="footer__email__box__four">
+                        <samp class="footer__bold__box__four">Email:</samp>
+                        <samp class="footer__text__box__four">growbeinfo@gmail</samp>
+                    </div>
+                    <div class="footer__phone__box__four">
+                        <samp class="footer__bold__box__four">Phone:</samp>
+                        <samp class="footer__text__box__four">+324-9332-5018</samp>
+                    </div>
+                </div>
             </div>
-            <div class="footer__img__logo">
-                <a href="#"><img src="img/6.svg" alt="logo2"></a>
-            </div>
-            <div class="footer__img__logo">
-                <a href="#"><img src="img/3.svg" alt="logo3"></a>
-            </div>
-            <div class="footer__img__logo">
-                <a href="#"><img src="img/4.svg" alt="logo4"></a>
-            </div>
-            <div class="footer__img__logo">
-                <a href="#"><img src="img/5.svg" alt="logo5"></a>
-            </div>
-            <div class="footer__img__logo">
-                <a href="#"><img src="img/6.svg" alt="logo6"></a>
+            <div class="footer__text__end">
+                <p class="footer__text__line"></p>
+                <p class="text">Copyright © GrowBe 2021. All Rights Reserved.</p>
             </div>
         </footer>
     </div>
 </body>
+
 </html>
